updated to view/edit user profile*

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -12,9 +12,12 @@
   <%= f.label :descrption %>
   <%= f.text_area :description, rows: 3 %>
   <br/>
-  <% Category.all.each do |category| %>
-    <%= check_box_tag name='post[category_ids][]', value=category.id %> <%= category.name %>
-  <% end %>
+  <div class=control-group>
+    <%= f.label "Categories" %>
+    <%= f.collection_check_boxes :category_ids, Category.all, :id, :name do |checkbox| %>
+      <% checkbox.label(class: 'checkbox inline'){checkbox.check_box(class: 'checkbox') + checkbox.text} %>
+    <% end %>
+  </div>
   <br/>
   <%= f.submit(@post.new_record? ? "Create Post" : "Update Post", class:"btn btn-primary") %>
 <% end %>
