--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -2,7 +2,7 @@
 <%= render 'shared/errors', object: @comment %>
 
 <%= form_for [@post, @comment] do |f| %>
-  <%= f.label :body %>
+  <%= f.label :body, 'New Comment' %>
   <%= f.text_area :body, rows: 3 %>
   <br/>
   <%= f.submit "Create Comment", class: 'btn btn-primary' %>
