--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,7 +16,7 @@
 
   <div class="tab-pane fade" id="Comments">
     <% @user.comments.each do |comment| %>
-      <%= render 'comments/comment', comment: comment %>
+      <%= render 'comments/comment', comment: comment, show_post: true %>
     <% end %>
   </div>
 
