--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,3 @@
 <%= render '/shared/content_title', title: "Register New User" %>
 
-<%= render 'form' %>
+<%= render 'form', password_needed: true%>
