--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,6 +1,23 @@
 <% show_post ||= false %>
 
 <div class='row'>
+
+  <div class='span0 well text-center'>
+    <% if logged_in? %>
+      <%= link_to vote_post_comment_path(comment.post, comment, vote: true), method: :post do %>
+        <i class='icon-arrow-up'></i>
+      <% end %>
+      <br/>
+      <%= pluralize(comment.total_votes, "vote") %>
+      <br/>
+      <%= link_to vote_post_comment_path(comment.post, comment, vote: false), method: :post do %>
+        <i class='icon-arrow-down'></i>
+      <% end %>
+    <% else %>
+      <%= pluralize(comment.total_votes, "vote") %>
+    <% end %>
+  </div>
+
   <div class= 'span8 well'>
     <em><%= comment.body %> </em>
     <% if show_post == true %> 
