--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -4,13 +4,13 @@
 
   <div class='span0 well text-center'>
     <% if logged_in? %>
-      <%= link_to vote_post_comment_path(comment.post, comment, vote: true), method: :post do %>
+      <%= link_to vote_post_comment_path(comment.post, comment, vote: true), method: :post, remote: true do %>
         <i class='icon-arrow-up'></i>
       <% end %>
       <br/>
-      <%= pluralize(comment.total_votes, "vote") %>
+      <span id='comment_<%= comment.id %>_vote'><%= pluralize(comment.total_votes, "vote") %></span>
       <br/>
-      <%= link_to vote_post_comment_path(comment.post, comment, vote: false), method: :post do %>
+      <%= link_to vote_post_comment_path(comment.post, comment, vote: false), method: :post, remote: true do %>
         <i class='icon-arrow-down'></i>
       <% end %>
     <% else %>
