--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -2,13 +2,13 @@
 <div class='row'>
   <div class= 'span0 well text-center'>
     <% if logged_in? %>
-      <%= link_to vote_post_path(post, vote: true), method: :post do %>
+      <%= link_to vote_post_path(post, vote: true), method: :post, remote: true do %>
         <i class='icon-arrow-up'></i>
       <% end %>
     <br/>
-    <%= pluralize(post.total_votes, "vote") %>
+    <span id='post_<%= post.id %>_vote'><%= pluralize(post.total_votes, "vote") %></span>
     <br/>
-    <%= link_to vote_post_path(post, vote: false), method: :post do %>
+    <%= link_to vote_post_path(post, vote: false), method: :post, remote: true do %>
       <i class='icon-arrow-down'></i>
     <% end %>
   <% else %>
