--- a/app/views/posts/vote.js.erb
+++ b/app/views/posts/vote.js.erb
@@ -1,5 +1,5 @@
 <% if @vote.valid? %>
-  $("#post_<%= @post.id %>_vote").html('<%= pluralize(@post.total_votes, "vote") %>');
+  $("#post_<%= @post.slug %>_votes").html('<%= pluralize(@post.total_votes, "vote") %>');
 <% else %>
-  alert('You may only vote once per post.')
+  alert('You may only vote once per post.');
 <% end %>
